# dashboard-reactor

./: .gitignore  App.bat  DESCRIPTION  NAMESPACE  RB003Test.xlsx  README.Rmd  Reaction seettings.xlsx  app.R  auxiliar.R  bd.csv  dygraph.css  main.R  main.py  nodemon.json  report.Rmd  report.qmd  server.R  shiny.R  ui.R
.github/workflows/: release.yml
Pages/: log.R  quality.R
R/: app_config.R  app_server.R  app_ui.R  mod_catalyst.R  mod_chemometrics.R  mod_log.R  mod_quality.R  mod_raw.R  mod_reaction.R  run_app.R  utils_assign_event.R  utils_change_str.R  utils_chem_class.R  utils_custom_reactable.R  utils_load_file.R  utils_load_gc.R  utils_load_ms.R  utils_plot.R  utils_reactor_values.R  utils_render_dy.R  utils_setup.R  utils_ui.R
dev/: 01_start.R  02_dev.R
inst/: golem-config.yml
man/: load_ms.Rd  mod_chemometrics_server.Rd  run_app.Rd
src/: auxiliar.R  server.R  ui.R
src/Pages/: quality.R
src/assets/: compounds.R
src/controllers/: chem_server.R  log_server.R  quality_server.R  raw_server.R
src/functions/: assign_event.R  conditional_color.R  custom_reactable.R  db_setup.R  load_file.R  load_gc.R  load_ms.R  norm_deriv.R  query.R  reactor_values.R  renderdy.R
src/modules/: catalyst_server.R  chem_server.R  log_server.R  quality_server.R  raw_server.R  reaction_server.R
src/pages/: catalyst.R  chemometric.R  composition.R  log.R  quality.R  raw_data.R  reaction.R
src/utils/: assign_event.R  change_str.R  conditional_color.R  custom_reactable.R  db_setup.R  (+9 more)
win-launcher/: Cargo.toml  build.rs
win-launcher/src/: main.rs
www/: custom.css
(+2 files in other folders)
